gcc/testsuite/gcc.dg/boolcomplex-1.c
@@ -1,0 +1,3 @@
+/* { dg-do compile } */
+/* { dg-options "" } */
+_Bool b = --0i == 0; /* { dg-error "lvalue required as decrement operand" } */
